ISSUE-119: Cleanup CardDavClient - export method